--- a/requirements.docker.txt
+++ b/requirements.docker.txt
@@ -4,15 +4,11 @@ openai==1.66.3
 pydantic==2.10.6
 python-dotenv==1.0.1
 
-# Essential dependencies missing from the original docker requirements
-aiohttp==3.10.12
-beautifulsoup4==4.12.3
-crawl4ai==0.4.24
-requests==2.32.3
-httpx==0.28.1
-pandas==2.2.3
-numpy==2.2.4
-nest-asyncio==1.6.0
-tqdm==4.67.1
-tenacity==9.0.0
-typing-extensions==4.12.2
+# Essential dependencies for the app to run
+aiohttp>=3.10.0,<3.11.0
+beautifulsoup4>=4.12.0
+crawl4ai>=0.4.0
+requests>=2.32.0
+httpx>=0.28.0
+nest-asyncio>=1.6.0
+tqdm>=4.67.0
