Update domain from chat.lauragonzales.com to app.lauragonzales.com
- Changed domain configuration in .do/app.yaml
- User confirmed they want to use app.lauragonzales.com instead

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -2,7 +2,7 @@ name: website-to-agent-chat
 region: nyc1
 
 domains:
-  - domain: chat.lauragonzales.com
+  - domain: app.lauragonzales.com
     type: PRIMARY
 
 services:
