--- a/requirements.docker.txt
+++ b/requirements.docker.txt
@@ -4,12 +4,9 @@ openai==1.66.3
 pydantic==2.10.6
 python-dotenv==1.0.1
 
-# Essential dependencies for the app to run
-aiohttp>=3.10.0,<3.11.0
-beautifulsoup4>=4.12.0
-crawl4ai>=0.4.0
+# Simple web scraping stack (much more reliable than Crawl4AI)
 requests>=2.32.0
-httpx>=0.28.0
+beautifulsoup4>=4.12.0
+
+# Async and utility libraries
 nest-asyncio>=1.6.0
-tqdm>=4.67.0
-playwright>=1.40.0
